updated VwSchemaObjectMapper to  load non pooled database cahace.